# trading-engine

./: .gitignore  .todo  .vercelignore  AGENTS.md  CHRIS_UPLOAD_DB.md  CLAUDE.md  README.md  commit-push.sh  llm-council.skill  start-dev.sh
backtesting/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOY_BACKTESTING_API.md  DEPLOY_MAIN_DB.md  DEPLOY_SHARED_DB.md  README.md  pyproject.toml
backtesting/.claude/: settings.local.json
backtesting/deploy/: deploy_api.sh  deploy_db.sh  experiments-db.service  experiments_api.py  main-db.service  orb-backtester.service
backtesting/frontend/: index.html  package-lock.json  package.json  vite.config.ts
backtesting/learnings/: ALPHA_V1.md  ALPHA_V2.md  CANDIDATE_DEPLOYABILITY.md  CL.md  CURRENT_REGIME_WORKFLOW.md  CURRENT_STRATEGY_WORKFLOW.md  CURRENT_WORKFLOWS.md  ES.md  FAST_ROBUST_PIPELINE_REPORT.md  FAST_V2_PHASE1_ROBUST_PIPELINE_REPORT.md  FAST_V2_ROBUST_PIPELINE_REPORT.md  FAST_VARIABLE_SWEEP_REPORT.md  GC.md  GENERAL_V1_ROBUST_PIPELINE_REPORT.md  NQ.md  README.md  REGIME.md  RTY.md  YM.md  alpha_v1_downside_research.md  downside_research.md  lsi_research_apr.md  prop_regime_specialist_framework.md
backtesting/python/: .env.example  CLAUDE.md  DEPLOY_SHARED_DB.md  pyproject.toml
backtesting/scripts/: _env.py  advance_cross_asset_orb_nonrejects.py  alpha_v1_combined_backtest.py  analyze_portfolio_4leg_first_payout_risk_sweep.py  analyze_portfolio_4leg_post_payout_risk_sweep.py  analyze_portfolio_4leg_weekly_withdrawal_ev.py  build_learnings_registry.py  convert_to_parquet.py  diagnose_nq_ny_short_82pct_wr.py  diagnose_nq_ny_short_wide_stops.py  download_1s_data.py  download_and_validate.py  download_data.py  download_orderbook_data.py  es_ny_risk_sweep.py  fetch_latest_1s.py  htf_lsi_common.py  hunter_classic_ema15_bias_sweep.py  hunter_classic_parity_report.py  hunter_classic_parity_sweep.py  hunter_classic_state_timing_sweep.py  manage_cache.py  prepare_nq_lsi_orderbook_windows.py  probe_nq_lsi_3m_trapped_reversal_exact_shadow_20260517.py  replay_nq_lsi_dynamic_sizing_phase_one.py  replay_nq_lsi_orderbook_impulse_frozen_thresholds.py  replay_nq_lsi_orderbook_risk_tiers.py  replay_nq_lsi_pure_1m_exact_mbp10_shadow.py  replay_nq_lsi_pure_1m_liquidity_vacuum_exact_shadow.py  replay_nq_lsi_sweep_reclaim_velocity.py  resample_1s.py  research_memory.py  reverse_engineer_goldx.py  reverse_engineer_ilm_ifvg.py  reverse_engineer_tradingview_orb.py  run_5leg_prod.py  run_6b_be_diagnostic.py  run_6b_focused_sweep.py  (+574 more)
python/: .gitignore  CLAUDE.md  README.md  pyproject.toml
(+1282 files in other folders)
